fix link to project home

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -138,9 +138,9 @@
 				&nbsp;&nbsp;&nbsp;rTorrent adaptation (ruTorrent):<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Moskalets Alexander (<a href="mailto:novik65@gmail.com">Novik</a>)<br/>
 				<br />
-				<strong>Check new vesion <a href="http://wl500g.info/showthread.php?t=14256" target=_blank>here</a></strong><br/>
+				<strong>Check new vesion <a href="http://rutorrent.googlecode.com" target=_blank>here</a></strong><br/>
 				<br />
-				<strong>Donate:</strong><br/><br/>
+				<strong>Donate:</strong> (WebMoney)<br/><br/>
 				&nbsp;&nbsp;&nbsp;R371559329179<br/>
 				&nbsp;&nbsp;&nbsp;Z372104612927<br/>
 				&nbsp;&nbsp;&nbsp;E104676675923<br/>
