main layout change

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -207,7 +207,7 @@
 		</div>
 		<table id="maincont" cellpadding="0" cellspacing="0" summary="layout table">
 			<tr>
-				<td class="uicell">
+				<td class="uicell" rowspan="3">
 					<div id="CatList">
 						<ul>
 							<li id="-_-_-all-_-_-" onclick="javascript:utWebUI.switchLabel(this);" class="sel">
@@ -232,7 +232,7 @@
 						</div>
 					</div>
 				</td>
-				<td class="uicell">
+				<td class="uicell" rowspan="3">
 					<div id="HDivider"></div>
 				</td>
 				<td class="uicell">
@@ -240,12 +240,12 @@
 				</td>
 			</tr>
 			<tr>
-				<td class="uicell" colspan="3">
+				<td class="uicell">
 					<div id="VDivider"></div>
 				</td>
 			</tr>
 			<tr>
-				<td class="uicell" colspan="3">
+				<td class="uicell">
 					<div id="tdetails">
 						<ul id="tabbar">
 							<script type="text/javascript">tdTabs.draw();</script>
