--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -4,6 +4,7 @@
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="cache-control" content="Private" />
+		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 		<link href="./favicon.ico" rel="SHORTCUT ICON" />
 		<link href="./palette/0/stable.css" rel="stylesheet" type="text/css" />
 		<style type="text/css">
