adding 'error' position to category list

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -221,6 +221,8 @@
 								<script type="text/javascript"> document.write(WUILang.Active); </script> (<span id="-_-_-act-_-_-c">0</span>)</li>
 							<li id="-_-_-iac-_-_-" onclick="javascript:utWebUI.switchLabel(this);">
 								<script type="text/javascript"> document.write(WUILang.Inactive); </script> (<span id="-_-_-iac-_-_-c">0</span>)</li>
+							<li id="-_-_-err-_-_-" onclick="javascript:utWebUI.switchLabel(this);">
+								<script type="text/javascript"> document.write(WUILang.Error); </script> (<span id="-_-_-err-_-_-c">0</span>)</li>
 							<li id="_hr_">
 								<hr />
 							</li>
