add diagnostic for torrent addition

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -327,9 +327,9 @@
 				</td>
 			</tr>
 		</table>
-		<iframe name="uploadfrm" id="uploadfrm" src="" width="0px" height="0px" scrolling="no" frameborder="0" onload="US();">
+		<iframe name="uploadfrm" id="uploadfrm" src="" width="0px" height="0px" scrolling="no" frameborder="0" onload="US('uploadfrm');">
 		</iframe>
-		<iframe name="uploadfrmurl" id="uploadfrmurl" src="" width="0px" height="0px" scrolling="no" frameborder="0" onload="USurl();">
+		<iframe name="uploadfrmurl" id="uploadfrmurl" src="" width="0px" height="0px" scrolling="no" frameborder="0" onload="USurl('uploadfrmurl');">
 		</iframe>
 		<script language="javascript" type="text/javascript">
 			addRightClickHandler( document.getElementById("-_-_-all-_-_-"), labelContextMenu );
