update plugins API

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -255,7 +255,7 @@
 							<script type="text/javascript">tdTabs.draw();</script>
 						</ul>
 						<div id="tdcont">
-							<div id="gcont"><table cellpadding="5" cellspacing="2" width="100%" summary="layout table">
+							<div id="gcont"><table cellpadding="5" cellspacing="2" width="100%" summary="layout table" id="mainlayout">
 									<tr>
 										<td colspan="6" class="Header">
 											<script type="text/javascript"> document.write(WUILang.Transfer); </script></td>
