<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru" lang="ru"> 	<head> 		<title></title> 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 		<meta http-equiv="cache-control" content="Private" /> 		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> 		<link href="./favicon.ico" rel="SHORTCUT ICON" /> 		<link href="./palette/0/stable.css" rel="stylesheet" type="text/css" /> 		<style type="text/css"> 			@import "./palette/0/style.css"; 		</style> 		<script type="text/javascript" src="./lang/langs.js"></script> 		<script type="text/javascript" src="./rs.js"></script> 		<script type="text/javascript" src="./common.js"></script> 		<script type="text/javascript" src="./stable.js"></script> 		<script type="text/javascript" src="./script.js"></script> 		<script type="text/javascript" src="./rtorrent.js"></script> 		<script type="text/javascript" src="./content.js"></script> 		<!--[if IE]><script type="text/javascript" src="./excanvas.js"></script><![endif]--> 		<script type="text/javascript" src="./jquery.js"></script>     		<script type="text/javascript" src="./jquery.flot.js"></script> 		<script type="text/javascript" src="./graph.js"></script> 		<script type="text/javascript" src="./plugins.js"></script> 	</head> 	<body> 		<div id="preload"></div> 		<div id="cover"> 			<div id="msg"><span id="loadimg">&nbsp;</span><script type="text/javascript"> document.write(WUILang.Loading); </script></div> 		</div> 		<div id="modalbg"></div> 		<div id="dragmask"></div> 		<div id="tadd"> <a href="javascript:Hide('tadd');" class="h"></a> 			<div id="tadd_h"><script type="text/javascript">document.write(WUILang.torrent_add);</script></div> 			<div class="cont fxcaret"> 				<form action="addtorrent.php" id="addtorrent" method="post" enctype="multipart/form-data" target="uploadfrm" onsubmit="return CheckUpload(this);"> 					<label><s

--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -322,6 +322,7 @@
 							<div id="TrackerList"></div>
 							<div id="PeerList"></div>
 							<div id="Speed" class="tab"></div>
+							<div id="Chunks"></div>
 							<div id="lcont"></div>
 						</div>
 					</div>
