--- a/rtorrent/index.html
+++ b/rtorrent/index.html
@@ -148,7 +148,9 @@
 			</div>
 		</div>
 		<div id="dlgLabel" class="dlg-window"> <a href="javascript:HideModal('dlgLabel');" class="dlg-close"></a>
-			<div id="dlgLabel-header" class="dlg-header">Enter Label</div>
+			<div id="dlgLabel-header" class="dlg-header">
+				<script type="text/javascript"> document.write(WUILang.enterLabel); </script>
+			</div>
 			<div class="content fxcaret">
 				<script type="text/javascript"> document.write(WUILang.Enter_label_prom); </script>:<br />
 				<input type="text" id="txtLabel" class="Textbox" /><br />
