--- a/rutorrent/index.html
+++ b/rutorrent/index.html
@@ -32,35 +32,35 @@
 		<div id="rs"></div>
 		<div id="sel"></div>
 		<div id="sc"></div>
-		<div id="t"><a id="mnu_add" href="javascript://void();" onclick="theWebUI.showAdd(); return(false);" title="Add Torrent...">
+		<div id="t"><a id="mnu_add" href="javascript://void();" onclick="theWebUI.showAdd(); return(false);" onfocus="this.blur()" title="Add Torrent...">
 				<div id="add"></div>
 			</a>
 			<div class="TB_Separator"></div>
-			<a id="mnu_remove" href="javascript://void();" onclick="theWebUI.remove(); return(false);" title="Remove">
+			<a id="mnu_remove" href="javascript://void();" onclick="theWebUI.remove(); return(false);" onfocus="this.blur()" title="Remove">
 				<div id="remove"></div>
 			</a>
 			<div class="TB_Separator"></div>
-			<a id="mnu_start" href="javascript://void();" onclick="theWebUI.start(); return(false);" title="Start">
+			<a id="mnu_start" href="javascript://void();" onclick="theWebUI.start(); return(false);" onfocus="this.blur()" title="Start">
 				<div id="start"></div>
-			</a><a id="mnu_pause" href="javascript://void();" onclick="theWebUI.pause(); return(false);" title="Pause">
+			</a><a id="mnu_pause" href="javascript://void();" onclick="theWebUI.pause(); return(false);" onfocus="this.blur()" title="Pause">
 				<div id="pause"></div>
-			</a><a id="mnu_stop" href="javascript://void();" onclick="theWebUI.stop(); return(false);" title="Stop">
+			</a><a id="mnu_stop" href="javascript://void();" onclick="theWebUI.stop(); return(false);" onfocus="this.blur()" title="Stop">
 				<div id="stop"></div>
 			</a>
 			<div class="TB_Separator"></div>
-			<a id="mnu_settings" href="javascript://void();" onclick="theWebUI.showSettings(); return(false);" title="Settings">
+			<a id="mnu_settings" href="javascript://void();" onclick="theWebUI.showSettings(); return(false);" onfocus="this.blur()" title="Settings">
 				<div id="setting"></div>
 			</a>
 			<div class="TB_Separator"></div>
-			<a id="mnu_help" href="javascript://void();" onclick="theDialogManager.toggle('dlgHelp'); return(false);" title="Help">
+			<a id="mnu_help" href="javascript://void();" onclick="theDialogManager.toggle('dlgHelp'); return(false);" onfocus="this.blur()" title="Help">
 				<div id="help"></div>
 			</a>
 			<div id="sb">
-			<a id="mnu_search" href="javascript://void();" onclick="theSearchEngines.show(); return(false);" title="Search">
+			<a id="mnu_search" href="javascript://void();" onclick="theSearchEngines.show(); return(false);" onfocus="this.blur()" title="Search">
 				<div id="search"></div>
 			</a>
 			<input type="text" class="TextboxMid" id="query" onfocus="$('#sc').hide();"/>
-			<a id="mnu_go" href="javascript://void();" onclick="theSearchEngines.run(); return(false);" title="Go">
+			<a id="mnu_go" href="javascript://void();" onclick="theSearchEngines.run(); return(false);" onfocus="this.blur()" title="Go">
 				<div id="go"></div>
 			</a>
 			<div id="ind"></div>
